compilador/grammar/yaplParser.py
# Generated from yapl.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class yaplParser ( Parser ):

    grammarFileName = "yapl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "')'", "';'", "','", 
                     "'='", "'<-'", "'+'", "'-'", "'*'", "'/'", "'=='", 
                     "'!='", "'<'", "'>'", "'>='", "'<='", "'&&'", "'||'", 
                     "':'", "'true'", "'.'", "'false'", "'class'", "'inherits'", 
                     "'self'", "'SELF_TYPE'", "'else'", "'fi'", "'if'", 
                     "'while'", "'new'", "'isvoid'", "'not'", "'return'", 
                     "'int'", "'string'", "'bool'", "'void'", "'let'", "'in'" ]

    symbolicNames = [ "<INVALID>", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
                      "SEMI", "COMMA", "EQUALS", "ASSIGN", "PLUS", "MINUS", 
                      "MULT", "DIV", "EQ", "NEQ", "LT", "GT", "GT_EQ", "LT_EQ", 
                      "AND", "OR", "COLON", "TRUE", "DOT", "FALSE", "CLASS", 
                      "INHERITS", "SELF", "SELF_TYPE", "ELSE", "FI", "IF", 
                      "WHILE", "NEW", "ISVOID", "NOT", "RETURN", "INT", 
                      "STRING_TYPE", "BOOL", "VOID", "LET", "IN", "ID", 
                      "TYPE_ID", "INTEGER", "STRING", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_classDeclaration = 1
    RULE_classBody = 2
    RULE_attributeDeclaration = 3
    RULE_assignmentDeclaration = 4
    RULE_type = 5
    RULE_methodDeclaration = 6
    RULE_parameterList = 7
    RULE_parameter = 8
    RULE_statement = 9
    RULE_variableDeclaration = 10
    RULE_letDeclaration = 11
    RULE_ifStatement = 12
    RULE_whileStatement = 13
    RULE_methodCallStatement = 14
    RULE_expressionStatement = 15
    RULE_returnStatement = 16
    RULE_expressionList = 17
    RULE_block = 18
    RULE_expression = 19

    ruleNames =  [ "program", "classDeclaration", "classBody", "attributeDeclaration", 
                   "assignmentDeclaration", "type", "methodDeclaration", 
                   "parameterList", "parameter", "statement", "variableDeclaration", 
                   "letDeclaration", "ifStatement", "whileStatement", "methodCallStatement", 
                   "expressionStatement", "returnStatement", "expressionList", 
                   "block", "expression" ]

    EOF = Token.EOF
    LBRACE=1
    RBRACE=2
    LPAREN=3
    RPAREN=4
    SEMI=5
    COMMA=6
    EQUALS=7
    ASSIGN=8
    PLUS=9
    MINUS=10
    MULT=11
    DIV=12
    EQ=13
    NEQ=14
    LT=15
    GT=16
    GT_EQ=17
    LT_EQ=18
    AND=19
    OR=20
    COLON=21
    TRUE=22
    DOT=23
    FALSE=24
    CLASS=25
    INHERITS=26
    SELF=27
    SELF_TYPE=28
    ELSE=29
    FI=30
    IF=31
    WHILE=32
    NEW=33
    ISVOID=34
    NOT=35
    RETURN=36
    INT=37
    STRING_TYPE=38
    BOOL=39
    VOID=40
    LET=41
    IN=42
    ID=43
    TYPE_ID=44
    INTEGER=45
    STRING=46
    COMMENT=47
    WS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(yaplParser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = yaplParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 40
                self.classDeclaration()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(yaplParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(yaplParser.CLASS, 0)

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.TYPE_ID)
            else:
                return self.getToken(yaplParser.TYPE_ID, i)

        def LBRACE(self):
            return self.getToken(yaplParser.LBRACE, 0)

        def classBody(self):
            return self.getTypedRuleContext(yaplParser.ClassBodyContext,0)


        def RBRACE(self):
            return self.getToken(yaplParser.RBRACE, 0)

        def INHERITS(self):
            return self.getToken(yaplParser.INHERITS, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = yaplParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(yaplParser.CLASS)
            self.state = 49
            self.match(yaplParser.TYPE_ID)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 50
                self.match(yaplParser.INHERITS)
                self.state = 51
                self.match(yaplParser.TYPE_ID)


            self.state = 54
            self.match(yaplParser.LBRACE)
            self.state = 55
            self.classBody()
            self.state = 56
            self.match(yaplParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.AttributeDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.AttributeDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.MethodDeclarationContext,i)


        def assignmentDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.AssignmentDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.AssignmentDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.StatementContext)
            else:
                return self.getTypedRuleContext(yaplParser.StatementContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = yaplParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 136320538117122) != 0):
                self.state = 62
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 58
                    self.attributeDeclaration()
                    pass

                elif la_ == 2:
                    self.state = 59
                    self.methodDeclaration()
                    pass

                elif la_ == 3:
                    self.state = 60
                    self.assignmentDeclaration()
                    pass

                elif la_ == 4:
                    self.state = 61
                    self.statement()
                    pass


                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def SEMI(self):
            return self.getToken(yaplParser.SEMI, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_attributeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeDeclaration" ):
                listener.enterAttributeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeDeclaration" ):
                listener.exitAttributeDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributeDeclaration" ):
                return visitor.visitAttributeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def attributeDeclaration(self):

        localctx = yaplParser.AttributeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attributeDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.type_()
            self.state = 68
            self.match(yaplParser.ID)
            self.state = 69
            self.match(yaplParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(yaplParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(yaplParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(yaplParser.SEMI, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_assignmentDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentDeclaration" ):
                listener.enterAssignmentDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentDeclaration" ):
                listener.exitAssignmentDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentDeclaration" ):
                return visitor.visitAssignmentDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def assignmentDeclaration(self):

        localctx = yaplParser.AssignmentDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignmentDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(yaplParser.ID)
            self.state = 72
            self.match(yaplParser.ASSIGN)
            self.state = 73
            self.expression(0)
            self.state = 74
            self.match(yaplParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(yaplParser.INT, 0)

        def STRING_TYPE(self):
            return self.getToken(yaplParser.STRING_TYPE, 0)

        def TYPE_ID(self):
            return self.getToken(yaplParser.TYPE_ID, 0)

        def BOOL(self):
            return self.getToken(yaplParser.BOOL, 0)

        def VOID(self):
            return self.getToken(yaplParser.VOID, 0)

        def SELF_TYPE(self):
            return self.getToken(yaplParser.SELF_TYPE, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = yaplParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 19654038781952) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def LPAREN(self):
            return self.getToken(yaplParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(yaplParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(yaplParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(yaplParser.ParameterListContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = yaplParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.type_()
            self.state = 79
            self.match(yaplParser.ID)
            self.state = 80
            self.match(yaplParser.LPAREN)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 19654038781952) != 0):
                self.state = 81
                self.parameterList()


            self.state = 84
            self.match(yaplParser.RPAREN)
            self.state = 85
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ParameterContext)
            else:
                return self.getTypedRuleContext(yaplParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.COMMA)
            else:
                return self.getToken(yaplParser.COMMA, i)

        def getRuleIndex(self):
            return yaplParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = yaplParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.parameter()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 88
                self.match(yaplParser.COMMA)
                self.state = 89
                self.parameter()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = yaplParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.type_()
            self.state = 96
            self.match(yaplParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(yaplParser.VariableDeclarationContext,0)


        def letDeclaration(self):
            return self.getTypedRuleContext(yaplParser.LetDeclarationContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(yaplParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(yaplParser.WhileStatementContext,0)


        def methodCallStatement(self):
            return self.getTypedRuleContext(yaplParser.MethodCallStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(yaplParser.ExpressionStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(yaplParser.ReturnStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(yaplParser.BlockContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = yaplParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.letDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.whileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 102
                self.methodCallStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 103
                self.expressionStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 104
                self.returnStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 105
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(yaplParser.ASSIGN, 0)

        def statement(self):
            return self.getTypedRuleContext(yaplParser.StatementContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = yaplParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.type_()
            self.state = 109
            self.match(yaplParser.ID)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 110
                self.match(yaplParser.ASSIGN)
                self.state = 111
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(yaplParser.LET, 0)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.TypeContext)
            else:
                return self.getTypedRuleContext(yaplParser.TypeContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.ID)
            else:
                return self.getToken(yaplParser.ID, i)

        def IN(self):
            return self.getToken(yaplParser.IN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(yaplParser.ExpressionContext,i)


        def SEMI(self):
            return self.getToken(yaplParser.SEMI, 0)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.ASSIGN)
            else:
                return self.getToken(yaplParser.ASSIGN, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.COMMA)
            else:
                return self.getToken(yaplParser.COMMA, i)

        def getRuleIndex(self):
            return yaplParser.RULE_letDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetDeclaration" ):
                listener.enterLetDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetDeclaration" ):
                listener.exitLetDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetDeclaration" ):
                return visitor.visitLetDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def letDeclaration(self):

        localctx = yaplParser.LetDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_letDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(yaplParser.LET)
            self.state = 115
            self.type_()
            self.state = 116
            self.match(yaplParser.ID)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 117
                self.match(yaplParser.ASSIGN)
                self.state = 118
                self.expression(0)


            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 121
                self.match(yaplParser.COMMA)
                self.state = 122
                self.type_()
                self.state = 123
                self.match(yaplParser.ID)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 124
                    self.match(yaplParser.ASSIGN)
                    self.state = 125
                    self.expression(0)


                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(yaplParser.IN)
            self.state = 134
            self.expression(0)
            self.state = 135
            self.match(yaplParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(yaplParser.IF, 0)

        def LPAREN(self):
            return self.getToken(yaplParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(yaplParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(yaplParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.StatementContext)
            else:
                return self.getTypedRuleContext(yaplParser.StatementContext,i)


        def FI(self):
            return self.getToken(yaplParser.FI, 0)

        def ELSE(self):
            return self.getToken(yaplParser.ELSE, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
